--- a/src/App.css
+++ b/src/App.css
@@ -6,52 +6,29 @@
 
 @layer base {
   h1 {
-    @apply text-2xl;
+    @apply text-7xl;
   }
   h2 {
     @apply text-xl;
   }
 
+  h3 {
+    @apply text-4xl text-brand-secondary font-display;
+  }
+
   p {
-    @apply lg:text-xl;
+    @apply leading-relaxed lg:text-xl;
   }
 
   a {
     @apply text-brand-secondary;
   }
 }
+
+@layer components {
+}
 @layer utilities {
   .pb-safe {
     padding-bottom: env(safe-area-inset-bottom);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
   }
 }
