--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,9 @@
     --color-black: #1a151b;
     --color-white: #f5f0e5;
     --color-gray: #5dadb3;
-    --color-brand-primary: #fff;
+    --color-brand-primary: #e6e6e5;
     --color-brand-secondary: #3b7f5c;
-    --color-brand-tertiary: #262628;
+    --color-brand-tertiary: #242429;
   }
 
   .dark {
