--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
     --color-brand-primary: #e6e6e5;
     --color-brand-secondary: #3b7f5c;
     --color-brand-tertiary: #242429;
+    --color-brand-tertiary--muted: #2424290d;
   }
 
   .dark {
@@ -22,6 +23,7 @@
     --color-brand-primary: #242429;
     --color-brand-secondary: #55ffa7;
     --color-brand-tertiary: #f6f6f6;
+    --color-brand-tertiary--muted: #f6f6f60d;
   }
 
   h1 {
