--- a/src/App.css
+++ b/src/App.css
@@ -10,20 +10,20 @@
     --color-black: #1a151b;
     --color-white: #f5f0e5;
     --color-gray: #5dadb3;
-    --color-brand-primary: #e6e6e5;
-    --color-brand-secondary: #3b7f5c;
-    --color-brand-tertiary: #242429;
-    --color-brand-tertiary--muted: #2424290d;
-  }
-
-  .dark {
-    --color-black: #1a151b;
-    --color-white: #f5f0e5;
-    --color-gray: #5dadb3;
     --color-brand-primary: #242429;
     --color-brand-secondary: #55ffa7;
     --color-brand-tertiary: #f6f6f6;
     --color-brand-tertiary--muted: #f6f6f60d;
+  }
+
+  .light {
+    --color-black: #1a151b;
+    --color-white: #f5f0e5;
+    --color-gray: #5dadb3;
+    --color-brand-primary: #e6e6e5;
+    --color-brand-secondary: #3b7f5c;
+    --color-brand-tertiary: #242429;
+    --color-brand-tertiary--muted: #2424290d;
   }
 
   h1 {
