--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,23 +33,23 @@
   }
 
   h1 {
-    @apply text-6xl font-bold;
+    @apply text-5xl lg:text-6xl font-bold;
   }
   h2 {
-    @apply text-brand-secondary text-5xl font-bold;
+    @apply text-3xl text-brand-secondary lg:text-4xl font-bold;
   }
 
   h3 {
-    @apply text-4xl text-brand-tertiary font-bold font-display;
+    @apply text-2xl lg:text-3xl text-brand-tertiary font-bold font-display;
   }
 
   h4 {
-    @apply text-3xl;
+    @apply text-xl lg:text-2xl;
   }
 
   p,
   li {
-    @apply leading-relaxed lg:text-xl;
+    @apply text-base leading-relaxed lg:text-xl;
   }
 
   li {
