--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,11 +36,11 @@
     @apply text-5xl lg:text-6xl font-bold;
   }
   h2 {
-    @apply text-3xl text-brand-secondary lg:text-4xl font-bold;
+    @apply text-3xl text-brand-secondary lg:text-4xl;
   }
 
   h3 {
-    @apply text-2xl lg:text-3xl text-brand-tertiary font-bold font-display;
+    @apply text-xl lg:text-2xl text-brand-tertiary font-bold font-display;
   }
 
   h4 {
@@ -49,7 +49,7 @@
 
   p,
   li {
-    @apply text-base leading-relaxed lg:text-xl;
+    @apply text-base leading-relaxed lg:text-lg;
   }
 
   li {
