--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,7 @@
   }
 
   body {
-    @apply bg-brand-primary;
+    @apply duration-500 transition-colors bg-brand-primary;
     margin: 0;
     font-family: "Outfit", -apple-system, BlinkMacSystemFont, "Segoe UI",
       "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
