--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,8 +18,8 @@
     --color-black: #1a151b;
     --color-white: #f5f0e5;
     --color-gray: #5dadb3;
-    --color-brand-primary: #e6e6e5;
-    --color-brand-secondary: #3b7f5c;
+    --color-brand-primary: #f0f0ef;
+    --color-brand-secondary: #127c42;
     --color-brand-tertiary: #242429;
     --color-brand-tertiary--muted: #2424290d;
   }
