Updates Free trial case study

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,6 +74,10 @@
     @apply text-brand-secondary;
   }
 
+  .full-bleed {
+    @apply -mx-6 sm:mx-0;
+  }
+
   .focus-base {
     @apply outline-none ring-offset-brand-primary group-focus-visible:ring-4 group-focus-visible:ring-offset-4 group-focus-visible:ring-brand-secondary focus-visible:ring-4 focus-visible:ring-offset-4 focus-visible:ring-brand-secondary;
   }
