--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,11 +46,11 @@
     @apply text-5xl lg:text-6xl font-bold;
   }
   h2 {
-    @apply text-3xl text-brand-tertiary opacity-50 lg:text-4xl;
+    @apply text-3xl font-bold text-brand-tertiary lg:text-4xl;
   }
 
   h3 {
-    @apply text-xl lg:text-2xl text-brand-tertiary font-bold font-display;
+    @apply text-2xl  mt-16 mb-8 text-brand-tertiary font-display;
   }
 
   h4 {
@@ -58,8 +58,14 @@
   }
 
   p,
+  ul,
+  ol {
+    @apply mt-4;
+  }
+
+  p,
   li {
-    @apply text-lg leading-relaxed lg:text-xl font-normal;
+    @apply text-lg leading-relaxed lg:text-xl lg:leading-normal font-normal;
   }
 
   ul {
