--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,8 @@
     --color-black: #1a151b;
     --color-white: #f5f0e5;
     --color-gray: #5dadb3;
-    --color-brand-primary: #242429;
+    /* --color-brand-primary: #242429; */
+    --color-brand-primary: #001418;
     --color-brand-secondary: #55ffa7;
     --color-brand-tertiary: #f6f6f6;
     --color-brand-tertiary--muted: #f6f6f60d;
@@ -18,7 +19,8 @@
     --color-black: #1a151b;
     --color-white: #f5f0e5;
     --color-gray: #5dadb3;
-    --color-brand-primary: #f0f0ef;
+    /* --color-brand-primary: #f0f0ef; */
+    --color-brand-primary: #ced3d2;
     --color-brand-secondary: #127c42;
     --color-brand-tertiary: #242429;
     --color-brand-tertiary--muted: #2424290d;
