--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,7 +32,7 @@
     font-family: "Outfit", -apple-system, BlinkMacSystemFont, "Segoe UI",
       "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
       "Helvetica Neue", sans-serif;
-    height: 100lvh;
+    height: 100%;
   }
 
   h1,
