Updates light color for light mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,8 +19,7 @@
     --color-black: #1a151b;
     --color-white: #f5f0e5;
     --color-gray: #5dadb3;
-    /* --color-brand-primary: #f0f0ef; */
-    --color-brand-primary: #ced3d2;
+    --color-brand-primary: #e0ebe9;
     --color-brand-secondary: #127c42;
     --color-brand-tertiary: #242429;
     --color-brand-tertiary--muted: #2424290d;
