--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,8 +21,8 @@
     --color-gray: #5dadb3;
     --color-brand-primary: #fefefe;
     --color-brand-secondary: #127c42;
-    --color-brand-tertiary: #242429;
-    --color-brand-tertiary--muted: #f1f7f40d;
+    --color-brand-tertiary: #2a3439;
+    --color-brand-tertiary--muted: #f1f7f485;
   }
 
   body {
