--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,7 @@
       "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
       "Helvetica Neue", sans-serif;
     height: 100%;
+    overflow-y: scroll;
   }
 
   h1,
