--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@
   }
 
   h3 {
-    @apply text-xl font-bold  mt-10 mb-6 text-brand-tertiary font-display;
+    @apply text-xl font-bold  mt-10 mb-6 text-brand-tertiary;
   }
 
   h4 {
