--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,7 +45,7 @@
   }
 
   h1 {
-    @apply text-6xl font-bold leading-relaxed;
+    @apply text-6xl font-bold leading-tight;
   }
   h2 {
     @apply text-xl mt-10 mb-6 font-bold text-brand-secondary uppercase tracking-wide;
