--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
     --color-gray: #5dadb3;
     /* --color-brand-primary: #242429; */
     --color-brand-primary: #001418;
-    --color-brand-secondary: #55ffa7;
+    --color-brand-secondary: #b0e13d;
     --color-brand-tertiary: #f6f6f6;
     --color-brand-tertiary--muted: #f6f6f60d;
   }
@@ -20,7 +20,7 @@
     --color-white: #ffffff;
     --color-gray: #5dadb3;
     --color-brand-primary: #fefefe;
-    --color-brand-secondary: #127c42;
+    --color-brand-secondary: #235f60;
     --color-brand-tertiary: #2a3439;
     --color-brand-tertiary--muted: #f1f7f485;
   }
