Removes unused class
Fix css nesting

File cleanup

Cleanup

File cleanup

Cleanup

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,25 +111,27 @@
   .card:hover .card-glow {
     position: absolute;
     inset: 0;
-    &:before {
-      content: "";
-      background: conic-gradient(
-        from var(--rotate),
-        transparent 0%,
-        var(--color-brand-secondary) 5%,
-        transparent 10%
-      );
-      position: absolute;
-      inset: 0;
-      animation: rotate 1.75s linear infinite;
-    }
-    &:after {
-      content: "";
-      background: var(--blue);
-      position: absolute;
-      inset: 2px;
-      border-radius: calc(var(--radius) - 2px);
-    }
+  }
+
+  .card:hover .card-glow:before {
+    content: "";
+    background: conic-gradient(
+      from var(--rotate),
+      transparent 0%,
+      var(--color-brand-secondary) 5%,
+      transparent 10%
+    );
+    position: absolute;
+    inset: 0;
+    animation: rotate 1.75s linear infinite;
+  }
+
+  .card:hover .card-glow:after {
+    content: "";
+    background: var(--blue);
+    position: absolute;
+    inset: 2px;
+    border-radius: calc(var(--radius) - 2px);
   }
 
   .proj-switcher_img {
