--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,7 +54,7 @@
     @apply text-4xl md:text-6xl font-bold leading-tight;
   }
   h2 {
-    @apply text-xl mt-10 mb-6 font-bold text-brand-secondary uppercase tracking-wide;
+    @apply text-2xl md:text-3xl mt-10 mb-6 font-bold tracking-wide;
   }
 
   h3 {
@@ -73,7 +73,7 @@
 
   p,
   li {
-    @apply text-lg leading-relaxed lg:text-xl lg:leading-relaxed opacity-90 font-normal;
+    @apply leading-relaxed lg:text-xl lg:leading-relaxed opacity-90 font-normal;
   }
 
   ul {
