--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,11 +54,11 @@
     @apply text-4xl md:text-6xl font-bold leading-tight;
   }
   h2 {
-    @apply text-2xl md:text-3xl mt-10 mb-6 font-bold tracking-wide;
+    @apply text-2xl md:text-3xl mt-10 mb-0 font-bold tracking-wide;
   }
 
   h3 {
-    @apply text-xl font-bold  mt-10 mb-6 text-brand-tertiary;
+    @apply text-xl font-normal  mt-10 mb-0 text-brand-tertiary;
   }
 
   h4 {
@@ -140,6 +140,10 @@
 
   .proj-switcher_img img {
     @apply opacity-50 flex-shrink-0 origin-center h-full transition-all duration-500 transform group-hover:opacity-100 group-hover:scale-105 group-hover:grayscale-0 filter grayscale;
+  }
+
+  .grid-2col {
+    @apply grid grid-cols-2 gap-6;
   }
 
   @keyframes slideInFromBottom {
